test_programs/compile_failure/brillig_mut_ref_from_acir/src/main.nr
unconstrained fn mut_ref_identity(value: &mut field) -> field {
    *value
}

fn main(mut x: field, y: pub field) {
    let returned_x = mut_ref_identity(&mut x);
    assert(returned_x == x);
}
